// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LoadingCard Clickable should render - 0 value 1`] = `
<DocumentFragment>
  <a
    href="localhost:3000/example/path/some-target"
  >
    None
  </a>
</DocumentFragment>
`;

exports[`LoadingCard Clickable should render - no data 1`] = `
<DocumentFragment>
  <a
    href="localhost:3000/example/path/undefined"
  >
    Not available
  </a>
</DocumentFragment>
`;

exports[`LoadingCard Loading card render - isLoading: false 1`] = `
<DocumentFragment>
  <div
    class="pf-v5-c-card"
    data-ouia-component-id="system-properties-card"
    data-ouia-component-type="PF5/Card"
    data-ouia-safe="true"
    id=""
  >
    <div
      class="pf-v5-c-card__body"
    >
      <div
        class="pf-v5-l-stack pf-m-gutter"
      >
        <div
          class="pf-v5-l-stack__item"
        >
          <div
            class="pf-v5-c-content"
          >
            <h1
              class=""
              data-ouia-component-id="SystemPropertiesCardTitle"
              data-ouia-component-type="PF5/Text"
              data-ouia-safe="true"
              data-pf-content="true"
            >
              Card that is loaded
            </h1>
          </div>
        </div>
        <div
          class="pf-v5-l-stack__item pf-m-fill"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`LoadingCard Loading card render - isLoading: true 1`] = `
<DocumentFragment>
  <div
    class="pf-v5-c-card"
    data-ouia-component-id="system-properties-card"
    data-ouia-component-type="PF5/Card"
    data-ouia-safe="true"
    id=""
  >
    <div
      class="pf-v5-c-card__body"
    >
      <div
        class="pf-v5-l-stack pf-m-gutter"
      >
        <div
          class="pf-v5-l-stack__item"
        >
          <div
            class="pf-v5-c-content"
          >
            <h1
              class=""
              data-ouia-component-id="SystemPropertiesCardTitle"
              data-ouia-component-type="PF5/Text"
              data-ouia-safe="true"
              data-pf-content="true"
            >
              Card that is loading
            </h1>
          </div>
        </div>
        <div
          class="pf-v5-l-stack__item pf-m-fill"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`LoadingCard Loading card render 1`] = `
<DocumentFragment>
  <div
    class="pf-v5-c-card"
    data-ouia-component-id="system-properties-card"
    data-ouia-component-type="PF5/Card"
    data-ouia-safe="true"
    id=""
  >
    <div
      class="pf-v5-c-card__body"
    >
      <div
        class="pf-v5-l-stack pf-m-gutter"
      >
        <div
          class="pf-v5-l-stack__item"
        >
          <div
            class="pf-v5-c-content"
          >
            <h1
              class=""
              data-ouia-component-id="SystemPropertiesCardTitle"
              data-ouia-component-type="PF5/Text"
              data-ouia-safe="true"
              data-pf-content="true"
            >
              Some title
            </h1>
          </div>
        </div>
        <div
          class="pf-v5-l-stack__item pf-m-fill"
        >
          <div
            class="pf-v5-c-content"
          >
            <dl
              class=""
            >
              <dt
                aria-label="test-title title"
                class=""
                data-ouia-component-id="test-title title"
              >
                test-title
              </dt>
              <dd
                aria-label="test-title value"
                class=""
                data-ouia-component-id="test-title value"
              >
                <div>
                  <a
                    href="localhost:3000/example/path/undefined"
                  >
                    some value
                  </a>
                </div>
              </dd>
              <dt
                aria-label="just title title"
                class=""
                data-ouia-component-id="just title title"
              >
                just title
              </dt>
              <dd
                aria-label="just title value"
                class=""
                data-ouia-component-id="just title value"
              >
                Not available
              </dd>
            </dl>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`LoadingCard should render loading bars 1`] = `
<DocumentFragment>
  <div
    class="pf-v5-c-card"
    data-ouia-component-id="system-properties-card"
    data-ouia-component-type="PF5/Card"
    data-ouia-safe="true"
    id=""
  >
    <div
      class="pf-v5-c-card__body"
    >
      <div
        class="pf-v5-l-stack pf-m-gutter"
      >
        <div
          class="pf-v5-l-stack__item"
        >
          <div
            class="pf-v5-c-content"
          >
            <h1
              class=""
              data-ouia-component-id="SystemPropertiesCardTitle"
              data-ouia-component-type="PF5/Text"
              data-ouia-safe="true"
              data-pf-content="true"
            >
              Some title
            </h1>
          </div>
        </div>
        <div
          class="pf-v5-l-stack__item pf-m-fill"
        >
          <div
            class="pf-v5-c-content"
          >
            <dl
              class=""
            >
              <dt
                aria-label="test-title title"
                class=""
                data-ouia-component-id="test-title title"
              >
                test-title
              </dt>
              <dd
                aria-label="test-title value"
                class=""
                data-ouia-component-id="test-title value"
              >
                <div
                  class="pf-v5-c-skeleton ins-c-skeleton ins-c-skeleton__md"
                >
                  <span
                    class="pf-v5-screen-reader"
                  />
                </div>
              </dd>
              <dt
                aria-label="just title title"
                class=""
                data-ouia-component-id="just title title"
              >
                just title
              </dt>
              <dd
                aria-label="just title value"
                class=""
                data-ouia-component-id="just title value"
              >
                <div
                  class="pf-v5-c-skeleton ins-c-skeleton ins-c-skeleton__sm"
                >
                  <span
                    class="pf-v5-screen-reader"
                  />
                </div>
              </dd>
            </dl>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
